--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
  <div class="hero">
     <nav>
-        <img src="Logo SPU SIT/Logo SPU SIT_Color.png" class="Logo">
+        <img src="Logo SPU SIT/Logo SPU SIT_Color.png" class="logo">
         <ul>
             <li><a href="">Features</a></li>
             <li><a href="">How it work</a></li>
